# exam-study-guide-skill

./: .gitignore  LICENSE  README.md  claude-skill.yaml  pyproject.toml
config/: computer_networks.yaml
src/exam_study_guide/: __init__.py  __main__.py  cli.py  config.py
src/exam_study_guide/extractors/: __init__.py  base.py  doc_extractor.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
src/exam_study_guide/generators/: __init__.py  review_points.py  study_guide.py  word_utils.py
src/exam_study_guide/matcher/: __init__.py  manual_assign.py  review_workflow.py  scorer.py
src/exam_study_guide/parsers/: __init__.py  base.py  calculation.py  multiple_choice.py  short_answer.py  true_false.py
tests/: test_config.py  test_extractors.py  test_matcher.py  test_parsers.py
