[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exam-study-guide-skill"
version = "1.0.0"
description = "Generate exam study guides from an outline and question banks. Cross-platform extraction, keyword matching with human review, and Claude Code skill support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Claude Code User"},
]
keywords = ["exam", "study-guide", "education", "claude-code", "skill", "docx", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
linux = ["textract>=1.6"]
macos = ["textract>=1.6"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
all = [
    "pywin32>=306",
    "textract>=1.6",
]

[project.scripts]
exam-study-guide = "exam_study_guide.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/exam_study_guide"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
